--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "bcryptjs": "^2.4.3",
     "compression": "^1.7.4",
     "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "esbuild": "0.19.2",
     "express": "^4.18.2",
@@ -53,6 +54,6 @@
     "prettier": "^3.0.0"
   },
   "engines": {
-    "node": ">=18.0.0 <19.0.0"
+    "node": "^18"
   }
 }
